--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,19 @@
   "version": "1.0",
   "description": "Adds a fullscreen toggle for the GOES Viewer animation block.",
   "permissions": ["activeTab", "scripting"],
+  "icons": {
+    "16": "icons/favicon-16x16.png",
+    "32": "icons/favicon-32x32.png",
+    "48": "icons/apple-touch-icon.png",
+    "128": "icons/android-chrome-192x192.png"
+  },
   "action": {
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icons/favicon-16x16.png",
+      "32": "icons/favicon-32x32.png",
+      "48": "icons/apple-touch-icon.png",
+      "128": "icons/android-chrome-192x192.png"
+    }
   }
 }
